# social-media-fastapi-demo

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  database.py  logging_conf.py  main.py  security.py
app/models/: post.py
app/routers/: post.py  user.py
app/tests/: conftest.py  test_security.py
app/tests/routers/: test_posts.py  test_user.py
